# mojap-arrow-pd-parser

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENCE.md  Makefile  README.md  poetry.toml  pyproject.toml  requirements.txt  s3testbigwrite.ipynb  s3tests.ipynb
.github/: reviewers.yml
.github/workflows/: auto_request_review.yml  lint.yml  poetry-pypi-release.yml  test-mojap-suite.yml  test.yml
arrow_pd_parser/: __init__.py  _arrow_parsers.py  _export.py  _readers.py  _writers.py  caster.py  export.py  pa_pd.py  parse.py  parse_csv.py  reader.py  utils.py  writer.py
arrow_pd_parser/parse/: __init__.py  arrow_parser.py  pandas_caster.py  pandas_parser.py
githooks/: pre-commit
tests/: conftest.py  test_arrow_parser.py  test_bool_conformance.py  test_date_timestamp_conformance.py  test_decimal_conformance.py  test_export.py  test_file_readers.py  test_int_conformance.py  test_pandas_parser.py  test_parse.py  test_project_version.py  test_reader_api.py  test_round_trip.py  test_str_conformance.py  test_utils.py  test_writer_api.py
tests/data/: all_types.csv  all_types.jsonl  bool_type.csv  bool_type.jsonl  csv_options_test.csv  date_type.csv  datetime_type.csv  datetime_type_oob.csv  decimal_type.csv  decimal_type.jsonl  example.py  example_data.csv  example_data.jsonl  export_test2.jsonl  int_type.csv  int_type.jsonl  missing_cols.csv  missing_cols.jsonl  missing_cols.parquet  string_type.csv
