[tool.poetry]
name = "arrow_pd_parser"
version = "0.4.1"
description = "MoJ arrow-pd-parser"
authors = ["Karik Isichei <karik.isichei@digital.justice.gov.uk>",
           "Alec Johnson <alec.johnson@digital.justice.gov.uk>",
           "Kimberley Brett <kimberley.brett@digital.justice.gov.uk>",
           "Thomas Hirsch <thomas.hirsch@digital.justice.gov.uk>",
           "Jacob Browning <jacob.browning@digital.justice.gov.uk>",
           "Jacob Hamblin-Pyke <jacob.hamblin-pyke@digital.justice.gov.uk>",
           "Anthony Cody <anthony.cody@digital.justice.gov.uk>",
           "George Kelly <george.kelly@digital.justice.gov.uk>",
           "Stephen Bias <stephen.bias@digital.justice.gov.uk>",
           ]

readme = "README.md"
repository = "https://github.com/moj-analytical-services/mojap-arrow-pd-parser"
homepage = "https://github.com/moj-analytical-services/mojap-arrow-pd-parser"

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.9"
pandas = "^1.2"
pyarrow = ">=2.0.0,<4.0.0"
mojap-metadata = {version = "^1.1.1", extras = ["arrow"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
