[tool.poetry]
name = "arrow_pd_parser"
version = "1.0.0"
description = "MoJ arrow-pd-parser"
authors = ["Karik Isichei <karik.isichei@digital.justice.gov.uk>",
           "Alec Johnson <alec.johnson@digital.justice.gov.uk>",
           "Kimberley Brett <kimberley.brett@digital.justice.gov.uk>",
           "Thomas Hirsch <thomas.hirsch@digital.justice.gov.uk>",
           "Jacob Browning <jacob.browning@digital.justice.gov.uk>",
           "Jacob Hamblin-Pyke <jacob.hamblin-pyke@digital.justice.gov.uk>",
           "Anthony Cody <anthony.cody@digital.justice.gov.uk>",
           "George Kelly <george.kelly@digital.justice.gov.uk>",
           "Stephen Bias <stephen.bias@digital.justice.gov.uk>",
           ]

readme = "README.md"
repository = "https://github.com/moj-analytical-services/mojap-arrow-pd-parser"
homepage = "https://github.com/moj-analytical-services/mojap-arrow-pd-parser"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10" # wrangler dependency
pandas = ">=1.2"
pyarrow = ">=5.0.0"
mojap-metadata = {version = "^1.2.2", extras = ["arrow"]}
awswrangler = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.1"
flake8 = "^3.8.4"
black = ">=21.8b0"
yamllint = ">=1.26.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
